# facts-cli

./: CMakeLists.txt  makefile
includes/: Fact.h
src/: Fact.cpp  main.cpp
